{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 130,
  "lineage": "fdc9f6ab-25cd-0474-3242-327b4936e091",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ns_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b3c03c6fadb6e2c",
            "arn": "arn:aws:ec2:us-east-1:616613574518:instance/i-0efa37b94681f36d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx-profile",
            "id": "i-0efa37b94681f36d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00824280f387da52d",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-18-234-53-88.compute-1.amazonaws.com",
            "public_ip": "18.234.53.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08bbe7300be833641",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05dc257c1f6bf516c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff6ac0a4461e91df",
            "tags": {
              "Name": "NixacLabs-ServerInstance1"
            },
            "tags_all": {
              "Name": "NixacLabs-ServerInstance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05dc257c1f6bf516c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3_bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ns_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b3c03c6fadb6e2c",
            "arn": "arn:aws:ec2:us-east-1:616613574518:instance/i-0ece75493b82266f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx-profile",
            "id": "i-0ece75493b82266f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab811e88abcec22a",
            "private_dns": "ip-10-0-2-235.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.235",
            "public_dns": "ec2-54-224-120-55.compute-1.amazonaws.com",
            "public_ip": "54.224.120.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01bc727fcda075bfc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05dc257c1f6bf516c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ecd0f245ce42f48",
            "tags": {
              "Name": "NixacLabs-ServerInstance2"
            },
            "tags_all": {
              "Name": "NixacLabs-ServerInstance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05dc257c1f6bf516c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3_bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ns_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:internet-gateway/igw-066261fd31e25accf",
            "id": "igw-066261fd31e25accf",
            "owner_id": "616613574518",
            "tags": {
              "Name": "NixacLabs-IGW"
            },
            "tags_all": {
              "Name": "NixacLabs-IGW"
            },
            "vpc_id": "vpc-0a1d0d631531090c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ns_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/19ae044710e1d014",
            "arn_suffix": "app/ns-lb/19ae044710e1d014",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ns-lb-1751115729.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/19ae044710e1d014",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ns-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04a11fd200fa72f7d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05ecd0f245ce42f48"
              },
              {
                "subnet_id": "subnet-0ff6ac0a4461e91df"
              }
            ],
            "subnets": [
              "subnet-05ecd0f245ce42f48",
              "subnet-0ff6ac0a4461e91df"
            ],
            "tags": {
              "Name": "Nixaclabs-LoadBalancer"
            },
            "tags_all": {
              "Name": "Nixaclabs-LoadBalancer"
            },
            "vpc_id": "vpc-0a1d0d631531090c8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ns_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:listener/app/ns-lb/19ae044710e1d014/12fd55e3e6e7d920",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/df04f9f3e27bff14",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:listener/app/ns-lb/19ae044710e1d014/12fd55e3e6e7d920",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:loadbalancer/app/ns-lb/19ae044710e1d014",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.ns_lb",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_security_group.ns_lb_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ns_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/df04f9f3e27bff14",
            "arn_suffix": "targetgroup/ns-lb-target-group/df04f9f3e27bff14",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/df04f9f3e27bff14",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ns-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "NS-LB-Target-Group"
            },
            "tags_all": {
              "Name": "NS-LB-Target-Group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a1d0d631531090c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ns_lb_target_group_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/df04f9f3e27bff14-20250619033407744400000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/df04f9f3e27bff14",
            "target_id": "i-0efa37b94681f36d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_instance.ns_instance_1",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3_bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ns_lb_target_group_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/df04f9f3e27bff14-20250619033407999100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:616613574518:targetgroup/ns-lb-target-group/df04f9f3e27bff14",
            "target_id": "i-0ece75493b82266f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_instance.ns_instance_2",
            "aws_lb_target_group.ns_lb_target_group",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.ns_lb_security_group",
            "aws_security_group.ns_public_security_group",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3_bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ns_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:route-table/rtb-0816e00c57c5cde3f",
            "id": "rtb-0816e00c57c5cde3f",
            "owner_id": "616613574518",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066261fd31e25accf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a1d0d631531090c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f4a2ba2483cca03",
            "route_table_id": "rtb-0816e00c57c5cde3f",
            "subnet_id": "subnet-0ff6ac0a4461e91df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_route_table.ns_public_route_table",
            "aws_subnet.ns_public_subnet",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082ea30428e9803e2",
            "route_table_id": "rtb-0816e00c57c5cde3f",
            "subnet_id": "subnet-05ecd0f245ce42f48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ns_internet_gateway",
            "aws_route_table.ns_public_route_table",
            "aws_subnet.ns_public_subnet_2",
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ns_lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:security-group/sg-04a11fd200fa72f7d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a11fd200fa72f7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ns_lb_security_group",
            "name_prefix": "",
            "owner_id": "616613574518",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "NixacLabs-LB-Security-Group"
            },
            "tags_all": {
              "name": "NixacLabs-LB-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1d0d631531090c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ns_public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:security-group/sg-05dc257c1f6bf516c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dc257c1f6bf516c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a11fd200fa72f7d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ns_public_security_group",
            "name_prefix": "",
            "owner_id": "616613574518",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a1d0d631531090c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ns_lb_security_group",
            "aws_vpc.ns_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ns_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:subnet/subnet-0ff6ac0a4461e91df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff6ac0a4461e91df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616613574518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a1d0d631531090c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ns_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:subnet/subnet-05ecd0f245ce42f48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ecd0f245ce42f48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616613574518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a1d0d631531090c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ns_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ns_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616613574518:vpc/vpc-0a1d0d631531090c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02067791d9d7d86cd",
            "default_route_table_id": "rtb-0e24196b3c0963193",
            "default_security_group_id": "sg-07a85c8dca692c225",
            "dhcp_options_id": "dopt-04570ddac239d7c3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1d0d631531090c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e24196b3c0963193",
            "owner_id": "616613574518"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}